broke everything; need to fix that

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web app created with React" />
+    <meta name="description" content="Manage your university courses, assignments, and deadlines with UniCourse" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>UniCourse</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
